Performance article completed