@@ -15,6 +15,8 @@ For example, we have 1 resource adapter, 2 resource connector (8 attributes 2 no
 * Resource connectors memory: `S = S1 + S2 = 30 + (8 * 6) + (2 * 3) + 30 + (6 * 8) + (3 * 3) = 171 MB`
 * Recommended amount of memory: `R = 2048 + 205 + 171 = 2424 MB = 2.3 GB`
 
+> RAM calculation methodology reflects SNAMP requirements only. So, the total RAM space installed in your hardware must be greater than space required by SNAMP because OS and other daemon processes utilizes its own memory. Take into account that SNAMP should not swap its memory.
+
 ## JVM settings
 The goal of JVM tuning is to minimize GC pauses. We offer two main strategies on GC tuning:
 1. Peak application performance is the first priority and there are no pause time requirements or pauses of 1 second or longer are acceptable
@@ -23,7 +25,23 @@ The goal of JVM tuning is to minimize GC pauses. We offer two main strategies on
 You should select the most convenient strategy based on your enterprise IT policies.
 > In most scenarios, number of monitoring & management tools are fixed in time (i.e. number of clients are fixed). If this is true for your enterprise then choose the second strategy.
 
-See [Garbage Collection Tuning](http://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/index.html) for more details.
+According with RAM calculation methodoly you may specify minimum and maximum Java memory:
+* For Linux, go to `bin` directory inside of installed SNAMP and open `bin/setnv` and specify
+	* `export JAVA_MIN_MEM=1024m`
+	* `export JAVA_MAX_MEM=Xm`, where `X` is your calculated memory, for example `export JAVA_MAX_MEM=2424m`
+* For Windows, go to `bin` directory inside of installed SNAMP and open `bin/setenv.bat`
+	* `SET JAVA_MIN_MEM=1024m`
+	* `SET JAVA_MAX_MEM=Xm`,  where `X` is your calculated memory, for example `SET JAVA_MAX_MEM=2424m`
+
+> We recommend you not to specify PermGen settings
+
+Additional JVM settings may be specified in `EXTRA_JAVA_OPTS` environment parameter.
+
+More information about GC tuning:
+* [Java 8 GC tuning](http://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/index.html)
+* [Java 6 GC tuning](http://www.oracle.com/technetwork/java/javase/gc-tuning-6-140523.html)
+* [Karaf Tuning](http://karaf.apache.org/manual/latest/users-guide/tuning.html)
+
 
 ### Memory utilization profile
 All Java objects created during SNAMP execution can be divided by its lifecycle:
@@ -35,10 +53,16 @@ Short-lived objects created for each attribute request or operation execution fr
 Long-lived objects created for each connected managed resource and resource adapter. So, resource adapter instance and resource connector instance are long-lived objects. Changing of SNAMP configuration causes releasing long-lived objects in **Old Generation Heap** (Tenured space). Therefore, if you expect frequent reconfiguring then setup the large OldGen heap (to avoid pauses).
 
 ### Throughput first
-If peak application performance is the first priority and there are no pause time requirements, then select the parallel collector with `-XX:+UseParallelGC`. For Java 8, 
+If peak application performance is the first priority and there are no pause time requirements or pauses of 1 second or longer are acceptable, then select the parallel collector with `-XX:+UseParallelGC`. Optionally, you may specify `-XX:+UseParallelOldGC` if you expect frequent SNAMP reconfiguring.
+
+Also, you may specify `-XX:GCTimeRatio=<N>` JVM option. For example, `-XX:GCTimeRatio=19` sets a goal of 1/20 or 5% of the total time in garbage collection.
+
 
 ### Response time first
-fff
+If response time is more important than overall throughput and garbage collection pauses must be kept shorter than approximately one second, then you may choose one of the following collectors:
+* Concurrent Mark & Sweep `-XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled`. Additionally, specify `-XX:+CMSIncrementalMode` if only two cores are available.
+* G1 collector with `-XX:+UseG1GC -XX:-UseAdaptiveSizePolicy`. This approach require large heaps. This means heap sizes of around 6GB or larger, and stable and predictable pause time below 0.5 seconds.
+
 
 ## Number of cores
 Each resource adapter or resource connector uses its own isolated thread pool.
